# Open-Jarvis

./: .gitignore  README.md  TROUBLESHOOTING.md  package-lock.json  package.json
docs/: MODEL_STRATEGY.md
docs/architecture/: AGENT_SYSTEM_DESIGN.md  AUTONOMOUS_EXECUTION_PIPELINE.md  DESKTOP_RUNTIME_ARCHITECTURE.md  INSTALLER_AND_BOOTSTRAP_SYSTEM.md  LOCAL_AI_RUNTIME.md  MASTER_PLAN.md  MEMORY_ARCHITECTURE.md  MODEL_ROUTING_SYSTEM.md  OVERLAY_AND_HUD_SYSTEM.md  PERFORMANCE_OPTIMIZATION.md  SCROLLYTELLING_PLAN.md  SECURITY_AND_SANDBOXING.md  UI_ARCHITECTURE.md  VISUAL_LANGUAGE.md
docs/research/: OPEN_SOURCE_RESEARCH.md
src/backend/: .env.example  Modelfile  main.py  pyproject.toml  test_telegram.py
src/backend/agents/: base.py  brain.py  intent_engine.py  planner.py  registry.py  tools.py
src/backend/api/: routes.py  websocket.py
src/backend/config/: __init__.py
src/backend/core/: context.py  event_bus.py  message_queue.py
src/backend/llm/: __init__.py  intent.py  model_manager.py  registry.py  router.py  training_data.py
src/backend/llm/providers/: __init__.py  base.py  gemini.py  gguf.py  ollama.py  openrouter.py
src/backend/memory/: __init__.py  conversation.py
src/backend/models/: Modelfile
src/backend/vision/: __init__.py  pipeline.py
src/cloud_bot/: app.py
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/capabilities/: default.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: main.rs
src/desktop/src-tauri/src/commands/: api_proxy.rs  file.rs  mod.rs  process.rs  system.rs  window.rs
src/desktop/src-tauri/src/hotkeys/: mod.rs
src/desktop/src-tauri/src/state/: mod.rs
src/desktop/src-tauri/src/tray/: mod.rs
src/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: main.tsx
src/frontend/src/app/: App.tsx  Providers.tsx
src/frontend/src/components/: SketchfabViewer.tsx  SplashScreen.tsx
src/frontend/src/components/avatar/: AvatarView.tsx  AvatarView.tsx.bak
src/frontend/src/components/chat/: ChatPanel.tsx
src/frontend/src/components/hud/: HUDOverlay.tsx  NotificationLayer.tsx  VoiceOverlay.tsx
src/frontend/src/components/panels/: ActivityPanel.tsx  HistoryPanel.tsx  PanelManager.tsx
src/frontend/src/components/vision/: WebcamCapture.tsx
src/frontend/src/core/: SceneCanvas.tsx
src/frontend/src/core/ipc/: tauri.ts
src/frontend/src/core/store/: index.ts
src/frontend/src/core/voice/: VoiceEngine.ts
src/frontend/src/core/websocket/: WebSocketProvider.tsx
src/frontend/src/styles/: globals.css
src/frontend/src/utils/: constants.ts  performance.ts  tauriFetch.ts
src/shared/constants/: index.ts
src/shared/types/: agents.ts  events.ts  messages.ts  models.ts
(+7 files in other folders)
