[project]
name = "jarvis-backend"
version = "0.1.0"
description = "JARVIS AI Operating System — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "silero-vad>=5.1",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
]
vision = [
    "Pillow>=10.4.0",
    "mss>=9.0.0",
    "easyocr>=1.7.0",
    "opencv-python-headless>=4.10.0",
]
ai = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "llama-cpp-python>=0.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agents*", "config*", "core*", "llm*", "models*", "services*", "voice*", "vision*", "memory*", "security*", "automation*", "db*"]
exclude = ["data*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
