[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"
description = "JARVIS — Local-First AI Operating System"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
urlencoding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"

[build-dependencies]
tauri-build = { version = "2", features = [] }
